--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
           <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
+      <div class="footer-section">
+        <iframe scrolling="no" src="https://neon.today/context/get/149682/37842/1/468/60" style="width: 468px; height: 60px;  padding: 0;border: 1px dotted grey;" frameborder="0"></iframe>
+      </div>
     </div>
     <div class="copyright">
       <p>&copy; 2024 Instagram Video Downloader. All rights reserved.</p>
